# insta-bot

./: .gitignore  LICENSE  Procfile  README.md  admin_routes.py  db.py  instagram.py  main.py  meta_client.py  pyproject.toml  render.yaml  requirements.txt  webhook_routes.py
app/: admin.py  admin_routes.py  db.py  llm.py  main.py  meta.py  meta_client.py  meta_oauth.py  models.py  state.py  webhook.py  webhook_routes.py
app/static/: admin.css  app.css  app.js
app/templates/: admin.html  admin_index.html  base.html  posts.html  templates.html  thread.html  triggers.html
src/insta_bot/: __init__.py  app.py
static/: admin.css
templates/: admin_index.html  base.html  templates.html  thread.html
tests/: test_webhook.py
