[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta-bot"
version = "0.2.0"
description = "Server-based Instagram automation web service with FastAPI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AsadAsadov"}]
dependencies = [
  "fastapi>=0.110.0",
  "jinja2>=3.1.3",
  "uvicorn[standard]>=0.27.1",
]
